What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

September 30, 2011
* [kaori] modified indexer for JPIP, JPP-stream

September 27, 2011
+ (mickael] WIP: enhance the event management into the new API
* (mickael] WIP: fix some warnings about a static function and j2k_read_unk_v2
+ (mickael] WIP: add basis for a new output management of the codestream information and index
* [mickael] WIP: fix some warnings from j2k_dump and index.c

September 22, 2011
* [mickael] WIP: fix build compilation (with autotools) with MJ2 option (credit to Winfried) 
* [mickael] WIP: fix build compilation error with windows platform about event_mgr management. 

September 21, 2011
+ [mickael] WIP: clean the j2k_dump application and the lib regards to the event management
+ [mickael] Enhance the support of endianess with cmake and inside the code (credit to Winfried) 

September 20, 2011
* [mickael] WIP: fixed build issues with MJ2 option ON
* [mickael] WIP: fixed build issues with JPWL option ON

September 19, 2011
+ [mickael] Enhance some new JPIP files about opj_config inclusion and using of free/calloc (credit to Julien Malik) 
+ [mickael] WIP: begin to test opj_decode_tile_data
+ [mickael] WIP: update t1, t2, tcd to use same strut as in V2
+ [mickael] WIP: begin to test opj_read_tile_header with V2 style
+ [mickael] WIP: create a new framework to output file information
+ [mickael] WIP: remove a piece of code copy by the merge op at the wrong place
+ [mickael] WIP: begin to clean j2k_dump and some other small things
+ [mickael] WIP: enchance the new version with some bug fixes from v1 and from me
+ [mickael] WIP: add support of jp2 for new j2k_dump function and some other small stuff
+ [mickael] WIP: new image_header struct is used and enable used of cstr_info
+ [mickael] WIP: manage the case of event_mgr is not provided to setup_decoder function 
+ [mickael] WIP: insert elements from V2 framework into the trunk (add missing files). 